--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.security.user.name=root
 spring.security.user.password=123
+spring.security.user.roles=ADMIN, SUPPER
 
-# ??thymeleaf?? ????
+# thymeleaf
 spring.thymeleaf.cache=false
