--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,29 @@
-spring.security.user.name=root
-spring.security.user.password=123
-spring.security.user.roles=ADMIN, SUPPER
+# \u9ED8\u8BA4\u5185\u5B58\u6570\u636E\u6E90
+#spring.security.user.name=root
+#spring.security.user.password=123
+#spring.security.user.roles=ADMIN, SUPPER
 
-# thymeleaf
+# \u81EA\u5B9A\u4E49\u6570\u636E\u6E90(\u6570\u636E\u5E93)
+# datasource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/security?characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+# mybatis
+# mapper\u4F4D\u7F6E(\u6CE8\u610F\u662F\u659C\u6760)
+mybatis.mapper-locations=classpath:com/matrix/hellospringsecurity/mapper/*.xml
+
+# \u5B9E\u4F53\u7C7B\u522B\u540D
+mybatis.type-aliases-package=com.matrix.hellospringsecurity.entity
+
+# log \u4E3A\u4E86\u5C55\u793Amybatis\u8FD0\u884CSQL\u8BED\u53E5
+logging.level.com.matrix.hellospringsecurity=debug
+
+# \u5173\u95EDthymeleaf\u7F13\u5B58
 spring.thymeleaf.cache=false
+
+
+
+
