--- a/SpringSecurity-Web/pom.xml
+++ b/SpringSecurity-Web/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.matrix</groupId>
-    <artifactId>Hello-SpringSecurity</artifactId>
+    <artifactId>SpringSecurity-Web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Hello-SpringSecurity</name>
-    <description>Hello-SpringSecurity</description>
+    <name>SpringSecurity-Web</name>
+    <description>SpringSecurity-Web</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -32,37 +32,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- 使用thymeleaf获取到上下文对象 -->
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-            <version>3.0.4.RELEASE</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <!-- 自定义数据源 -->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.38</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.7</version>
         </dependency>
     </dependencies>
 
